--- a/blog.html
+++ b/blog.html
@@ -8,182 +8,29 @@
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+    <link rel="stylesheet" href="static/css/style.css" >
 
-        header.navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1000;
-        }
-
-        .hero-section {
-            background: url("static/images/bgimg.jpg") no-repeat center center;
-            background-size: cover;
-            color: white;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding-top: 80px;
-            transition: all 0.3s ease;
-        }
-
-        .hero-section h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-        }
-
-        .hero-section .btn {
-            font-size: 1.4rem;
-            padding: 12px 40px;
-            border-radius: 50px;
-            transition: background-color 0.3s ease;
-        }
-
-        .hero-section .btn:hover {
-            background-color: #ff9800;
-        }
-
-        .section-padding {
-            padding: 60px 0;
-        }
-
-        .feature-list ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .feature-list li {
-            margin: 15px 0;
-        }
-
-        .feature-list h4 {
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-
-        .feature-list p {
-            font-size: 1rem;
-            color: #555;
-        }
-
-        .feature-list i {
-            font-size: 2.5rem;
-            color: #ff9800;
-            margin-bottom: 15px;
-        }
-
-        .footer {
-            background-color: #333;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        .footer a {
-            color: #ddd;
-            padding: 0 10px;
-        }
-
-        .footer .timer {
-            font-size: 1.2rem;
-            font-weight: bold;
-            animation: glow 1.5s infinite alternate;
-        }
-
-        @keyframes glow {
-            0% {
-                text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #FFD700;
-                color: #0a1301;
-            }
-
-            100% {
-                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #FFD700;
-                color: #0f0e0f;
-            }
-        }
-
-        .blog-content {
-            padding: 60px 0;
-        }
-
-        .blog-content h2 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-
-        .blog-content p {
-            font-size: 1.1rem;
-            line-height: 1.6;
-            color: #555;
-            margin-bottom: 30px;
-        }
-
-        .blog-content .btn {
-            font-size: 1.2rem;
-            padding: 12px 40px;
-            border-radius: 50px;
-            background-color: #ff9800;
-            color: white;
-            text-decoration: none;
-        }
-
-        .blog-content .btn:hover {
-            background-color: #f57c00;
-        }
-
-        @media (max-width: 767px) {
-            .hero-section h1 {
-                font-size: 2.5rem;
-            }
-
-            .hero-section .btn {
-                font-size: 1.1rem;
-                padding: 10px 30px;
-            }
-
-            .form-inline {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .form-group {
-                width: 100%;
-                margin-bottom: 15px;
-            }
-
-            .form-control {
-                width: 90%;
-                margin: 0 auto;
-            }
-
-            .footer .timer {
-                font-size: 1rem;
-            }
-        }
-    </style>
 </head>
 
 <body>
 
-    <header class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">X-Fit</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
+                <!-- Work in Progress Bar -->
+                <!-- Work in Progress Bar -->
+                <div class="work-in-progress">
+                    <span>Building in progress – one rep at a time!</span>
+                    <img src="https://cdn.pixabay.com/photo/2020/05/04/01/37/dumbbell-5127417_1280.png" alt="Loading..."
+                    class="loading-icon">
+                </div>
+            
+            
+                <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <a class="navbar-brand" href="#">X-Fit</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#about">Features</a></li>
@@ -192,6 +39,7 @@
                 <li class="nav-item"><a class="nav-link" href="blog.html">Blogs</a></li>
             </ul>
         </div>
+
     </header>
 
     <section class="hero-section">
