--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
  <!-- Title and Description for SEO -->
- <title>X-Fit. - The Future of Fitness</title>
+<title>X-Fit - The Future of Fitness</title>
  <meta name="description" content="X-Fit is your go-to platform to find trusted, verified gyms near you. Simplify your fitness journey and discover local gyms with ease. Join the X-Fit movement today!">
  
  <!-- Keywords for SEO -->
@@ -28,7 +28,7 @@
  <meta name="twitter:description" content="Join the X-Fit movement and easily discover gyms near you. Find verified gyms and fitness spaces that suit your needs.">
  <meta name="twitter:image" content="static/images/xfit-logo.png">
     
-    <title>X-Fit. - The Future of Fitness</title>
+    <title>X-Fit - The Future of Fitness</title>
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <!-- Font Awesome CDN link -->
@@ -53,14 +53,14 @@
                     <i class="fas fa-bars"></i>
                 </div>
             <div class="nav-links">
-                <a href="#">Home</a>
+                <a href="#signup">Home</a>
                 <!-- <a href="#signup" class="dropdown">Explore Our Category <i class="fas fa-chevron-down"></i></a> -->
                 <!-- <a href="#signup" class="list-gym">List Your Gym <i class="fas fa-plus"></i></a> -->
-                <a href="#signup">Why X-Fit.</a>
+                <a href="#features">Why X-Fit</a>
                 <a href="#signup">Contact</a>
-                <a href="#signup">About</a>
-                <a href="#signup">Login</a>
-                <a href="#signup" class="signup">Sign Up</a>
+                <a href="#about">About</a>
+                <!-- <a href="#signup">Login</a>
+                                                                                                <a href="#signup" class="signup">Sign Up</a> -->
             </div>
             </div>
     </header>
@@ -74,10 +74,12 @@
         <div class="container text-justify">
             <div class="row">
                 <div class="col-md-4">
-            <h2><b>Why X-Fit.</b></h2>
+            <h2><b>What is X-Fit</b></h2>
         </div>
         <div class="col-md-8">
-            <p>X-Fit. is your all-in-one fitness platform, connecting you with high-quality gyms and personalized fitness centers. Discover tailored gym recommendations, manage memberships, and access fitness products—all in one place. Empowering your fitness journey, X-Fit. simplifies and personalizes wellness like never before.</p>
+            <p>X-Fit is your all-in-one fitness platform, connecting you with high-quality gyms and personalized fitness centers.
+                Discover tailored gym recommendations, manage memberships, and access fitness products—all in one place. Empowering
+                your fitness journey, X-Fit simplifies and personalizes wellness like never before.</p>
         </div>
     </div>
     </div>
@@ -85,7 +87,7 @@
 
     <section class="section-padding" id="features">
         <div class="container">
-            <h2 class="text-center mb-4"><b>Why Choose X-Fit.</b></h2>
+            <h2 class="text-center mb-4"><b>Why Choose X-Fit</b></h2>
             <br>
             <div class="row feature-list">
                 <div class="col-md-6 col-lg-3 text-center">
@@ -152,7 +154,7 @@
 
     <section class="section-padding" id="signup">
         <div class="container d-flex flex-column justify-content-center align-items-center">
-            <h2 class="text-center">Be the First to Experience X-Fit.</h2>
+            <h2 class="text-center">Be the First to Experience X-Fit</h2>
             <div class="form-container">
                 <form id="signupForm" method="post" action="">
                     <div class="form-group">
@@ -212,12 +214,12 @@
 
 
     <footer class="footer">
-        <div class="left">
+        <!-- <div class="left">
             <img alt="X-Fit. logo" src="static/images/xfit.jpg" />
             <p>
                 Join our newsletter to stay up to date on features and releases.
             </p>
-            <!-- <form>
+            <form>
                 <input placeholder="Enter your email" type="email" />
                 <button type="submit">
                     SUBSCRIBE
@@ -225,14 +227,14 @@
             </form>
             <p>
                 By subscribing you agree to with our Privacy Policy and provide consent to receive updates from our company.
-            </p> -->
-        </div>
+            </p>
+            </div> -->
         <div class="center">
             <h3>
                 Gym
             </h3>
             <a href="#signup">
-                Membership
+                Memberships
             </a>
             <a href="#signup">
                 Contact
@@ -240,11 +242,11 @@
             <a href="#signup">
                 Locations
             </a>
-            <a href="#signup">
+            <!-- <a href="#signup">
                 Pricing
-            </a>
+            </a> -->
             <a href="#signup">
-                Review
+                Reviews
             </a>
         </div>
         <div class="center">
@@ -252,7 +254,7 @@
                 Company
             </h3>
             <a href="#signup">
-                Why X-Fit.
+                Why X-Fit
             </a>
             <a href="#signup">
                 Careers
@@ -294,7 +296,7 @@
             <a href="#signup">
                 <i class="fab fa-youtube">
                 </i>
-                Youtube
+                YouTube
             </a>
         </div>
         <div class="bottom">
@@ -317,25 +319,50 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<script>
+<!-- <script>
     function toggleMenu() {
         const navLinks = document.querySelector('.nav-links');
         navLinks.classList.toggle('active');
         navLinks.style.display = navLinks.style.display === 'flex' ? 'none' : 'flex';
-    }
-        // Close the menu when clicking outside of it
-        document.addEventListener('click', function(event) {
-        const navLinks = document.querySelector('.nav-links');
-        const hamburger = document.querySelector('.hamburger');
+        // // Automatically close the menu when toggling
+        //         if (navLinks.classList.contains('active')) {
+        //     navLinks.style.display = 'flex';
+        // } else {
+        //     navLinks.style.display = 'none';
+        // }
+    // }
+    //     // Close the menu when clicking outside of it
+    //     document.addEventListener('click', function(event) {
+    //     const navLinks = document.querySelector('.nav-links');
+    //     const hamburger = document.querySelector('.hamburger');
 
-        // Check if the click was outside the nav links and hamburger
-        if (!navLinks.contains(event.target) && !hamburger.contains(event.target)) {
-            navLinks.classList.remove('active');
-            navLinks.style.display = 'none';
+    //     // Check if the click was outside the nav links and hamburger
+    //     if (!navLinks.contains(event.target) && !hamburger.contains(event.target)) {
+    //         navLinks.classList.remove('active');
+    //         navLinks.style.display = 'none';
+    //     }
+    // });
+    };
+
+    /script> -->
+
+    <script>
+        function toggleMenu() {
+            const navLinks = document.querySelector('.nav-links');
+            navLinks.classList.toggle('active');
+            navLinks.style.display = navLinks.style.display === 'flex' ? 'none' : 'flex';
+
+            // Close the menu when clicking on a nav link
+            const navItems = document.querySelectorAll('.nav-links a');
+            navItems.forEach(item => {
+                item.addEventListener('click', () => {
+                    navLinks.classList.remove('active');
+                    navLinks.style.display = 'none';
+                });
+            });
         }
-    });
 </script>
-<!-- <script>
+<script>
     function toggleMenu() {
         const navLinks = document.querySelector('.nav-links');
         navLinks.classList.toggle('active');
@@ -367,8 +394,8 @@
             }, 300); // Match this duration with the CSS transition duration
         }
     });
-</script> -->
-<script>
+</script>
+<!-- <script>
     $(document).ready(function() {
         // Smooth scrolling for all links with href starting with #
         $('a[href^="#"]').on('click', function(event) {
@@ -378,16 +405,21 @@
             // Store hash
             var target = this.hash;
 
-            // Animate the scroll to the target section
-            $('html, body').animate({
-                scrollTop: $(target).offset().top
-            }, 800, function() {
-                // Update the URL hash without jumping
-                window.location.hash = target;
-            });
-        });
+// Animate the scroll to the top first
+$('html, body').animate({
+scrollTop: 0
+}, 400, function() {
+// After scrolling to the top, scroll to the target section
+$('html, body').animate({
+scrollTop: $(target).offset().top
+}, 800, function() {
+// Update the URL hash without jumping
+window.location.hash = target;
+});
+});
+                });
     });
-</script>
+    </script> -->
 
 <script>
     // Function to toggle the "Other" text input visibility
@@ -401,7 +433,7 @@
         }
     }
     
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxy344y-uNQU_GTsGGkZ1LNwmskWBbtaI5AmCQ069Rvkn_piKZHH94eHWAAjQAkLbri9Q/exec';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxQqEpp4LPK_DIIaM52QzUzQ66QIk4nTR_GdmLjIFBqeppIxF5Fa-O6m4oJRszlV-N4/exec';
     const form = document.getElementById('signupForm');
 
     // Email Validation
@@ -917,7 +949,7 @@
                 <td valign="top" style="padding:25px 50px 15px 50px;background-color:#ffffff">
                     <p class="paragraph"
                         style="font-family:Open Sans, sans-serif;text-align:center;line-height:27.20px;font-size:16px;margin:0;color:#141414;word-break:normal">
-                        Thank you for joining the X-Fit Community! <br><br>Our story: I once drove 30 minutes in
+                        Thank you for joining the X-Fit Community! <br><br><b>Our story:</b> I once drove 30 minutes in
                         Bengaluru traffic to check out this "amazing gym" I found online. Guess what? It didn't even
                         exist anymore! 😅 <br> <br>That's why we started X-Fit. We do all the gym-hunting work for you.
                         Don't worry. <br> <br>We have a standardized checklist created from feedback from users like
